SelectDropdown: Fixed carrot icon overlapping with selected option(s) for whole application

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5120,3 +5120,6 @@ span.label-font{
 .disabled{
   pointer-events: none;
 }
+.select-wrapper span.caret{
+  right: -9px;
+}
